--- a/src/app/modules/contributes/contribute-list/contribute-list.component.css
+++ b/src/app/modules/contributes/contribute-list/contribute-list.component.css
@@ -24,5 +24,18 @@
       border: gray 1px solid;
   }
 
+mat-panel-title,
+mat-panel-description {
+  width: 300px;;
+
+}
+
+
+
+
+  
+  
+  
+
   
  
